profile guard and add feld profiles db

--- a/frontend/src/app/user/components/user-configuration/user-configuration.component.html
+++ b/frontend/src/app/user/components/user-configuration/user-configuration.component.html
@@ -23,7 +23,7 @@
       >
     </div>
   </div>
-  <div>
+  <div class="w-full">
     <div class="pt-5 vertical-border m-auto">
       <section id="personal-information">
         <h2>Información personal</h2>
