--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
     <div class="flex items-center menu-buttons md:flex-row-reverse">
       <div>
         <button (click)="navigateTo('register')" class="mr-2 btn btn-primary">
-          Sign in
+          Sign up
         </button>
       </div>
       <div class="hidden md:block">
@@ -33,8 +33,10 @@
           data-bs-toggle="dropdown"
           aria-expanded="false"
           (click)="isMenuOpen = !isMenuOpen"
+          id="button-menu"
         >
           <fa-icon
+            id="button-menu-svg"
             [icon]="faBars"
             size="lg"
             class="text-secondary-300 hover:text-secondary-500"
@@ -112,6 +114,19 @@
           (click)="navigateTo('configuration')"
         >
           <fa-icon [icon]="faCogs" class="m-1"></fa-icon>Configuración
+        </li>
+        <li class="p-1 text-secondary-500">
+          <hr class="text-secondary-50" />
+          Perfiles
+          <ul>
+            <li
+              class="m-1 bg-primary-500 hover:bg-primary-800 text-white-500 rounded-full px-3 cursor-pointer"
+              *ngFor="let profile of profiles"
+            >
+              {{ profile.name }}
+            </li>
+          </ul>
+          <hr class="text-secondary-50" />
         </li>
         <li
           class="p-1 text-secondary-500 hover:bg-primary-400 hover:text-white-500 cursor-pointer"
