Profile backend and front

--- a/frontend/src/app/user/components/user-configuration/user-configuration.component.html
+++ b/frontend/src/app/user/components/user-configuration/user-configuration.component.html
@@ -98,7 +98,7 @@
       <section id="profiles">
         <h2>Perfiles</h2>
         <div
-          *ngFor="let profile of user.profiles"
+          *ngFor="let profile of profiles"
           class="mt-2 border-dashed border-secondary-400 border-2 cursor-pointer p-3 rounded-lg mb-3 hover:opacity-50"
           (click)="editProfile(profile.id)"
         >
