--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -43,9 +43,9 @@
           ></fa-icon>
         </button>
         <ul
-          class="min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1"
+          class="min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1 transform scale-100 transition duration-150 ease-in-out"
           aria-labelledby="dropdownMenu"
-          [ngClass]="{ block: isMenuOpen, hidden: !isMenuOpen }"
+          [ngClass]="{ 'scale-100': isMenuOpen, 'scale-0': !isMenuOpen }"
         >
           <li
             class="p-1 text-secondary-500 hover:bg-primary-400 hover:text-white-500 cursor-pointer"
@@ -105,9 +105,9 @@
         ></fa-icon>
       </button>
       <ul
-        class="min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1"
+        class="min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1 transform scale-100 transition duration-150 ease-in-out"
         aria-labelledby="dropdownMenu"
-        [ngClass]="{ block: isMenuOpen, hidden: !isMenuOpen }"
+        [ngClass]="{ 'scale-100': isMenuOpen, 'scale-0': !isMenuOpen }"
       >
         <li
           class="p-1 text-secondary-500 hover:bg-primary-400 hover:text-white-500 cursor-pointer"
@@ -120,8 +120,14 @@
           Perfiles
           <ul>
             <li
-              class="m-1 bg-primary-500 hover:bg-primary-800 text-white-500 rounded-full px-3 cursor-pointer"
+              class="m-1 border-2 border-primary-500 hover:bg-primary-500 hover:text-white-500 rounded-full px-3 cursor-pointer"
               *ngFor="let profile of profiles"
+              (click)="selectProfile(profile?.id)"
+              [ngClass]="{
+                'bg-primary-500 text-white-500 cursor-default':
+                  profileSelected === profile.id,
+                'bg-white-500 text-primary-500': profileSelected !== profile.id
+              }"
             >
               {{ profile.name }}
             </li>
