--- a/frontend/src/app/user/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/user/components/user-profile/user-profile.component.html
@@ -1,4 +1,5 @@
 <div class="p-2 max-w-[900px] m-auto">
+  <app-breadcrumb [breacrumbHistory]="breacrumbHistory"></app-breadcrumb>
   <h2>Nuevo perfil</h2>
   <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="my-4">
     <div class="my-2">
