init components backend, control error profile and phases

--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -1,12 +1,21 @@
-<p>components works!</p>
+<div class="p-2 limit-container">
+  <div class="flex flex-row align-items-center">
+    <h2>Componentes</h2>
+    <span class="before:content-['|'] before:mx-4">0 componentes</span>
+  </div>
+</div>
 <button
   type="button"
   [routerLink]="['/components/details']"
   routerLinkActive="router-link-active"
->Details</button>
+>
+  Details
+</button>
 
 <button
   type="button"
   [routerLink]="['/components/edit']"
   routerLinkActive="router-link-active"
->Edit</button>
+>
+  Edit
+</button>
