--- a/frontend/src/app/properties/components/properties-list/properties-list.component.html
+++ b/frontend/src/app/properties/components/properties-list/properties-list.component.html
@@ -9,20 +9,43 @@
 </div>
 
 <div class="flex flex-row flex-wrap gap-2">
-  <fa-icon
-    *ngIf="allowEdition"
-    [icon]="faPlus"
-    class="text-primary-400 hover:text-primary-700 cursor-pointer"
-  ></fa-icon>
-  <fa-icon
-    *ngIf="allowEdition"
-    [icon]="faPencil"
-    class="text-primary-400 hover:text-primary-700 cursor-pointer"
-  ></fa-icon>
-  <div
-    class="rounded-full border-2 px-4 cursor-pointer border-secondary-500 text-secondary-500 hover:text-white-500 hover:bg-secondary-500"
-    *ngFor="let property of properties$ | async"
-  >
-    {{ property.name }}
+  <div>
+    <button
+      type="button"
+      class="transition ease-in-out delay-50 duration-200 rotate-0"
+      (click)="newProperty = !newProperty"
+      [ngClass]="{
+        'rotate-45 text-primary-500 hover:text-secondary-500': newProperty,
+        'text-secondary-500 hover:text-primary-500': !newProperty
+      }"
+    >
+      <fa-icon *ngIf="allowEdition" [icon]="faPlus"></fa-icon>
+    </button>
+    <div
+      class="inline-block transition ease-in-out delay-250 duration-200 scale-0"
+      [ngClass]="{ 'scale-100': newProperty }"
+    >
+      <app-property-form
+        *ngIf="newProperty"
+        (onFinishCreating)="onFinishCreating()"
+      ></app-property-form>
+    </div>
   </div>
+  <button
+    type="button"
+    (click)="editingProperties = !editingProperties"
+    [ngClass]="{
+      'text-primary-500 hover:text-secondary-500': editingProperties,
+      'text-secondary-500 hover:text-primary-500': !editingProperties
+    }"
+  >
+    <fa-icon *ngIf="allowEdition" [icon]="faPencil"></fa-icon>
+  </button>
+  <app-property-item
+    *ngFor="let property of properties$ | async"
+    [property]="property"
+    (onSelect)="onSelectProperty($event)"
+    [editing]="editingProperties"
+    (onRemoved)="onPropertyRemoved()"
+  ></app-property-item>
 </div>
