--- a/frontend/src/app/components/components/component-form/component-form.component.html
+++ b/frontend/src/app/components/components/component-form/component-form.component.html
@@ -2,13 +2,14 @@
   <app-breadcrumb [breacrumbHistory]="breacrumbHistory"></app-breadcrumb>
   <h2>{{ componentId ? component?.name : "Nuevo componente" }}</h2>
   <form [formGroup]="componentForm" (ngSubmit)="onSubmit()" class="my-4">
-    <div class="my-2">
+    <div class="my-2 custom-input-labeled">
       <input
         type="text"
         [formControl]="name"
         class="dark-input"
         placeholder="Nombre"
       />
+      <label for="name">Nombre</label>
       <div
         *ngIf="name.errors && (name.touched || name.dirty)"
         class="form-errors"
@@ -19,7 +20,25 @@
         </div>
       </div>
     </div>
-    <div class="my-2">
+    <div class="my-2 custom-input-labeled">
+      <input
+        type="text"
+        [formControl]="scientific_name"
+        class="dark-input"
+        placeholder="Nombre científico"
+      />
+      <label for="scientific_name">Nombre científico</label>
+    </div>
+    <div class="my-2  custom-input-labeled">
+      <input
+        type="date"
+        min="new Date()"
+        [formControl]="expiration_date"
+        class="dark-input"
+      />
+      <label for="expiration_date">Fecha de caducidad</label>
+    </div>
+    <div class="my-2 custom-input-labeled">
       <textarea
         name="description"
         class="dark-input"
@@ -27,6 +46,7 @@
         rows="8"
         [formControl]="description"
       ></textarea>
+      <label for="description">Descripción</label>
       <div
         *ngIf="description.errors && (description.touched || description.dirty)"
         class="form-errors"
@@ -54,7 +74,11 @@
     </div>
     <div class="my-2">
       <h3 class="my-1">Propiedades</h3>
-      <app-properties-list [allowEdition]="true" [allowSearch]="true"></app-properties-list>
+      <app-properties-list
+        [allowEdition]="true"
+        [allowSearch]="true"
+        (updateProperties)="updateProperties($event)"
+      ></app-properties-list>
     </div>
     <div class="text-center">
       <button
