properties as state redux, init components (corregido)

--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -5,3 +5,9 @@
   </div>
 </div>
 <button type="button" (click)="createComponent()">Edit</button>
+<div>
+  <app-component-item
+    *ngFor="let component of components$ | async as list"
+    [component]="component"
+  ></app-component-item>
+</div>
