--- a/frontend/src/app/components/components/component-item/component-item.component.html
+++ b/frontend/src/app/components/components/component-item/component-item.component.html
@@ -1,8 +1,32 @@
-<div class="border-2 max-w-[150px] p-2 m-2">
-  <h4>{{ component.name }}</h4>
+<div #container class="max-w-[150px] p-4 m-2 relative group cursor-pointer">
+  <div
+    #borderTop
+    class="absolute top-0 right-0 w-full h-[10px] bg-[length:3px_10px] bg-repeat-x"
+  ></div>
+  <div
+    #borderLeft
+    class="absolute top-0 left-0 w-[10px] h-full bg-top-left bg-[length:10px_3px] bg-repeat-y"
+  ></div>
+  <div
+    #borderRight
+    class="absolute top-0 right-0 w-[10px] h-full bg-top-left bg-[length:10px_3px] bg-repeat-y"
+  ></div>
+  <div
+    #borderBottom
+    class="absolute bottom-0 right-0 w-full h-[10px] bg-[length:3px_10px] bg-repeat-x"
+  ></div>
+  <h4
+    [ngStyle]="{ color: phase && phase.color ? phase.color : '#0f172a' }"
+    class="font-medium group-hover:!text-white-500"
+  >
+    {{ component.name }}
+  </h4>
   <div class="flex flex-wrap justify-end text-right">
-    <span *ngFor="let property of component.properties">{{
-      property.name
-    }}</span>
+    <span
+      class="text-sm group-hover:!text-white-500"
+      *ngFor="let property of component.properties"
+      [ngStyle]="{ color: phase && phase.color ? phase.color : '#0f172a' }"
+      >{{ property.name }}.&nbsp;</span
+    >
   </div>
 </div>
