--- a/frontend/src/app/components/components/component-item/component-item.component.html
+++ b/frontend/src/app/components/components/component-item/component-item.component.html
@@ -1,4 +1,4 @@
-<div #container class="max-w-[150px] p-4 m-2 relative group cursor-pointer">
+<div #container class="max-w-[150px] p-4 m-2 relative group cursor-pointer" (click)="onDetails()">
   <div
     #borderTop
     class="absolute top-0 right-0 w-full h-[10px] bg-[length:3px_10px] bg-repeat-x"
