--- a/frontend/src/app/components/components/components-phase/components-phase.component.html
+++ b/frontend/src/app/components/components/components-phase/components-phase.component.html
@@ -2,7 +2,10 @@
   class="m-2 p-2 border-2 border-dashed rounded-xl"
   [ngStyle]="{ 'border-color': phase?.color }"
 >
-  <div class="px-2 flex justify-between hover:opacity-60 cursor-pointer " (click)="open = !open">
+  <div
+    class="px-2 flex justify-between hover:opacity-60 cursor-pointer"
+    (click)="open = !open"
+  >
     <h4
       class="tracking-widest uppercase font-semibold"
       [ngStyle]="{ color: phase?.color }"
@@ -10,15 +13,17 @@
       {{ phase?.name }}
     </h4>
     <div class="flex">
-      <span class="px-1" [ngStyle]="{'color': phase?.color}">{{count}} componentes</span>
+      <span class="px-1" [ngStyle]="{ color: phase?.color }"
+        >{{ components.length }} componentes</span
+      >
       <fa-icon
         [icon]="open ? faChevronUp : faChevronDown"
         [ngStyle]="{ color: phase?.color }"
       ></fa-icon>
     </div>
   </div>
-  <div class="flex flex-wrap" *ngIf="open" >
-    <ng-container *ngFor="let component of components | async as list">
+  <div class="flex-wrap" [ngClass]="{ hidden: !open, flex: open }">
+    <ng-container *ngFor="let component of components ">
       <app-component-item
         [component]="component"
         *ngIf="component.phase_id === phase?.id"
