--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
     <h2>Componentes</h2>
     <div class="flex flex-row justify-between w-full">
-      <span class="md:before:content-['|'] md:before:mx-4">0 componentes</span>
+      <span class="md:before:content-['|'] md:before:mx-4">{{components.length}} componentes</span>
 
       <button type="button" (click)="createComponent()" class="btn btn-primary">
         <fa-icon [icon]="faPlus"></fa-icon>
@@ -22,6 +22,6 @@
   <app-components-phase
     *ngFor="let phase of phases"
     [phase]="phase"
-    [components]="components$"
+    [components]="filterByPhase(phase.id)"
   ></app-components-phase>
 </div>
