--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
     <h2>Componentes</h2>
     <div class="flex flex-row justify-between w-full">
-      <span class="md:before:content-['|'] md:before:mx-4">{{components.length}} componentes</span>
+      <span class="md:before:content-['|'] md:before:mx-4">{{components?.length || 0}} componentes</span>
 
       <button type="button" (click)="createComponent()" class="btn btn-primary">
         <fa-icon [icon]="faPlus"></fa-icon>
