--- a/frontend/src/app/properties/components/property-item/property-item.component.html
+++ b/frontend/src/app/properties/components/property-item/property-item.component.html
@@ -1,9 +1,10 @@
 <div
-  class="rounded-full border-2 px-4 cursor-pointer border-secondary-500 text-secondary-500 h-[100%]"
+  class="rounded-full border-2 px-4 border-secondary-500 text-secondary-500 h-[100%]"
   [ngClass]="{
     'text-white-500 bg-secondary-500': selected,
     'animate-pulse': editing && !edited,
-    'hover:text-white-500 hover:bg-secondary-500': !editing
+    'hover:text-white-500 hover:bg-secondary-500': !editing,
+    'cursor-pointer': allowEdition
   }"
   (click)="select()"
 >
