end componentes, init recipes and compositions

--- a/frontend/src/app/components/components/component-details/component-details.component.html
+++ b/frontend/src/app/components/components/component-details/component-details.component.html
@@ -1,5 +1,5 @@
 <div class="p-2 m-auto max-w-[900px]">
-  <app-breadcrumb [breacrumbHistory]="breacrumbHistory"></app-breadcrumb>
+  <app-breadcrumb [breadcrumbHistory]="breadcrumbHistory"></app-breadcrumb>
   <div class="flex justify-between">
     <h2>{{ component?.name }}</h2>
     <div class="flex gap-1">
