--- a/frontend/src/app/components/components/component-form/component-form.component.html
+++ b/frontend/src/app/components/components/component-form/component-form.component.html
@@ -1,5 +1,5 @@
 <div class="p-2 m-auto max-w-[900px]">
-  <app-breadcrumb [breacrumbHistory]="breacrumbHistory"></app-breadcrumb>
+  <app-breadcrumb [breadcrumbHistory]="breadcrumbHistory"></app-breadcrumb>
   <h2>{{ componentId ? component?.name : "Nuevo componente" }}</h2>
   <form
     *ngIf="componentForm"
