--- a/frontend/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/frontend/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -3,7 +3,7 @@
     <ul class="flex flex-row">
       <li
         class="after:content-['/'] after:mx-2 last:after:content-['']"
-        *ngFor="let nav of breacrumbHistory"
+        *ngFor="let nav of breadcrumbHistory"
       >
         <a
           class="italic text-secondary-500"
