--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -1,1 +1,28 @@
-<p>recipes works!</p>
+<div class="p-2 limit-container">
+  <div class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
+    <h2>Recetas</h2>
+    <div class="flex flex-row justify-between w-full">
+      <span class="md:before:content-['|'] md:before:mx-4"
+        >{{ recipes?.length || 0 }} componentes</span
+      >
+    </div>
+  </div>
+  <div class="flex flex-column">
+    <input
+      type="text"
+      class="border-2 border-secondary-100 rounded-full py-2 px-4 w-full my-2"
+      placeholder="Buscar receta"
+      [(ngModel)]="searchTerm"
+      (keyup)="search()"
+    />
+  </div>
+  <div class="flex flex-wrap">
+    <div
+      class="group hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-white-900 max-w-[150px] p-4 m-2 relative group cursor-pointer"
+      (click)="onCreate()"
+    >
+      <fa-icon [icon]="faPlus" class="fa-2x text-secondary-100 group-hover:text-secondary-300"></fa-icon>
+      <h4 class="text-secondary-100 group-hover:text-secondary-300">Formular</h4>
+    </div>
+  </div>
+</div>
